HACK-468 #comment fixed cut off bottom icons

--- a/css/media-queries.css
+++ b/css/media-queries.css
@@ -924,7 +924,7 @@ MEDIA QUERIES
     }
 
     .sb-right .footer-sprite {
-        height: 1.5em;
+        height: 1.6em;
     }
 
     /*
